fix: fix css issue, chat message still can't wrap

--- a/src/css/chatRoom.css
+++ b/src/css/chatRoom.css
@@ -1,8 +1,3 @@
-.chatroom p {
-    margin: 0;
-    display: inline-block;
-}
-
 a:link {
     text-decoration: none;
 }
@@ -16,22 +11,7 @@ a:link {
     /* border-radius: 5px; */
     /* box-shadow: 0 0 10px 0 rgba(151, 151, 151, 0.5); */
     height: calc(100vh - 115px);
-
 }
-
-/* .chatroom h3 {
-    font-family: 'Pacifico', cursive;
-    background-color: rgba(30, 228, 148, 0.7);
-    color: #FFF;
-    margin: 0;
-    height: 40px;
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-} */
 
 .chatroom .chats {
     box-sizing: border-box;
@@ -48,8 +28,23 @@ a:link {
     position: relative;
     font-size: 14px;
     border-radius: 7px;
-    list-style: none;
-    max-width: 200px;
+    max-width: 270px;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    hyphens: auto;
+}
+
+.chatroom .chats .chat p {
+    margin: 0;
+    /* display: inline-block; */
+    /* color: blue; */
+    /* word-break: break-all; */
+    font-size: 14px;
+    border-radius: 7px;
+    max-width: 270px;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    hyphens: auto;
 }
 
 .chatroom .chats .time {
@@ -80,6 +75,12 @@ a:link {
     position: absolute;
     top: -20px;
     left: -33px;
+}
+
+.chatroom .chats .chat .chatContent {
+    /* color: red;
+    display: flex;
+    flex-wrap: wrap; */
 }
 
 .chatroom .chats .chat.left {
